# pydantic-practise

./: pyproject.toml
field_validation/: assignment.py  example.py
foundation/: assignments.py
model_behaviour/: assignment.py  example.py
nested_model/: assignment.py
serialization/: assignment.py
